@@ -1,3 +1,8 @@
+2010-04-08  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/42956
+	* gcc.c-torture/compile/pr42956.c: New testcase.
+
 2010-04-08  Jakub Jelinek  <jakub@redhat.com>
 
 	Backport from mainline:
